# monotremata-interface

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  Dockerfile  Dockerfile.cluster  Dockerfile.dev  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  cli.sh  docker-compose.yaml  pyproject.toml  tox.ini
app/: .gitignore  manage.py  mono.json  presets.json  run.sh  themes.json  user.json
app/helm-monotremata/: Chart.yaml  values.yaml
app/helm-monotremata/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
app/helm-monotremata/templates/tests/: test-connection.yaml
app/interactive/: dashboard.ipynb  interface.py
app/interface/: asgi.py  settings.py  urls.py  wsgi.py
app/interface/routes/: i18n.py  jwt.py  swagger.py
app/monotremata/: admin.py  apps.py  defaults.py  middleware.py  modelling.py  models.py  presets.py  serializers.py  urls.py  views.py
app/monotremata/management/commands/: git.py  parser.py  setup.py
app/monotremata/templates/: Dockerfile  admin.py  applicationset.yaml  cli.sh  docker-compose.yaml  git-actions-cli.yaml  git-actions.yaml  models.py  models_import.py  pyproject.toml  settings.py  setup.py  urls.py  values-settings.yaml  views.py
app/monotremata/templatetags/: monotremata.py
app/templates/admin/: base_site.html  login.html
app/templates/assets/: approach-data-layer.drawio  bad.csv  crossplatform.drawio  data-layer.drawio  overview.drawio  test.csv  time-strategy.drawio
app/templates/presentation/: index.html  print-dark.css  print.css  style.css  wrapper.html
app/templates/presentation/slides/: 01-overview.html  01-problem.html  02-0-requirements.html  02-1-requirements.html  02-requirements.html  03-solution.html  04-0-journey.html  04-1-journey copy.html  04-journey.html  05-key-experiences.html  06-0-core-solution.html  06-1-monotremata.html  07-0-core-api.html  07-1-core-api.html  08-0-tech-benefits.html  09-0-stakeholder-benefits.html  10-0-next.html  10-1-next.html  10-2-live-demo.html
app/templates/rest_framework/: admin.html  api.html  login_base.html
app/templates/web/: api.html  presentation.html
docs/: MonotremataInterfacePresentation.html  index.html
