[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=77",
]

[project]
name = "monotremata-interface"
version = "1.0.2"
description = """monotremata-interface is a Django application for handling ogc monotremara data."""
readme = "README.rst"
keywords = [
  "api",
  "django",
  "models",
  "rest",
  "database",
  "proxy",
]
license = "GPL-3.0"
license-files = [ "LICENSE" ]
maintainers = [
  { name = "Amir Yousefi", email = "mail@groupeffect.de" },
]
authors = [
  { name = "Amir Yousefi", email = "mail@groupeffect.de" },
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]
dependencies = [
    "Django==6.0.4",
    "django-admin-interface==0.32.0",
    "django-colorfield==0.14.0",
    "django-cors-headers==4.9.0",
    "django-extensions==4.1",
    "django-filter==25.2",
    "django-import-export==4.4.0",
    "django-lifecycle==1.2.7",
    "djangorestframework==3.17.1",
    "djangorestframework-simplejwt==5.5.1",
    "django-apptemplates==1.5",
    "django-ct-ontology==1.0.0",
    "djangorestframework-gis==1.2.1",
    "drf-spectacular==0.29.0",
    "drf-spectacular-sidecar==2026.4.14",
    "pandas==3.0.2",
    "geopandas==1.1.3",
    "whitenoise==6.12.0",
    "psycopg2-binary==2.9.12",
    "debugpy==1.8.21",
    "requests>=2.34.2",
    "openpyxl==3.1.5",
    "jupyterlab==4.5.8",
    "ipywidgets==8.1.8",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.3",
    "matplotlib==3.10.9",
    "matplotlib-inline==0.2.1",
    "pandera==0.31.1",
]
urls.Changelog = "https://github.com/groupeffect/monotremata-interface/blob/main/CHANGELOG.rst"
urls.Repository = "https://github.com/groupeffect/monotremata-interface"

[tool.setuptools.packages.find]
where = ["app"]
exclude = ["interface*", "manage*", "monotremara/migrations/0001_initial.py"]

[dependency-groups]
test = [
  "asgiref>=3.6",
  "coverage[toml]",
  "pytest",
  "pytest-django",
  "pytest-randomly",
]
django60 = [ "django>=6a1,<6.1; python_version>='3.12'" ]

[tool.uv]

[tool.ruff]
lint.select = [
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # pycodestyle
  "E",
  # Pyflakes errors
  "F",
  # isort
  "I",
  # flake8-simplify
  "SIM",
  # flake8-tidy-imports
  "TID",
  # pyupgrade
  "UP",
  # Pyflakes warnings
  "W",
]
lint.ignore = [
  # flake8-bugbear opinionated rules
  "B9",
  # line-too-long
  "E501",
  # suppressible-exception
  "SIM105",
  # if-else-block-instead-of-if-exp
  "SIM108",
]
lint.extend-safe-fixes = [
  # non-pep585-annotation
  "UP006",
]
lint.isort.required-imports = [ "from __future__ import annotations" ]

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.pytest]
ini_options.addopts = """\
    --strict-config
    --strict-markers
    --ds=tests.settings
    """
ini_options.django_find_project = true
ini_options.xfail_strict = true

[tool.coverage]
run.branch = true
run.data_file = ".coverage/cov"
run.parallel = true
run.source = [
  "monotremara",
  "tests",
]
paths.source = [
  "app",
  ".tox/**/site-packages",
]
report.show_missing = true
report.skip_covered = true
report.skip_empty = true

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
mypy_path = "app/"
namespace_packages = false
strict = true
warn_unreachable = true
overrides = [ { module = "tests.*", allow_untyped_defs = true } ]

[tool.rstcheck]
report_level = "ERROR"
